ALS-9303: Refactoring and cleanup from previous PR (#166)